# tgeraser

./: .gitignore  .pylintrc  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  build.py  build_package.py  build_utils.py  pylintrc.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_release.yml
.prospector/: tgeraser_style.yml
examples/: credentials.yml
tgeraser/: __init__.py  __main__.py  __version__.py  core.py  eraser.py  exceptions.py  utils.py
