[metadata]
name = tgeraser
version = attr: tgeraser.__version__
description = Tool deletes all your messages from chat/channel/dialog on Telegram
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/en9inerd/tgeraser
author = Vladimir Loskutov
author_email = vladimir@enginerd.io
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
keywords = telegram, api, delete messages
license = MIT License
license_file = file: LICENSE

[options]
packages = find:
python_requires = >=3.9, <4
install_requires =
    docopt
    pyaes
    pyasn1
    pyyaml
    rsa
    telethon

[options.packages.find]
exclude =
    test

[options.entry_points]
console_scripts =
    tgeraser = tgeraser.core:entry

[semantic_release]
version_variable = tgeraser/__init__.py:__version__
