[metadata]
name = tgeraser
version = attr: tgeraser.__version__.VERSION
description = Tool deletes all your messages from chat/channel/conversation on Telegram.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/en9inerd/tgeraser 
author = Vladimir Loskutov
author_email = vladimir@enginerd.io
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
keywords = telegram, api, delete messages
license = MIT License
license_file = LICENSE

[options]
zip_safe = False
packages = find:
python_requires = >=3.8, <4
install_requires =
    docopt
    pyaes
    pyasn1
    rsa
    telethon>=1.32.0

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    tgeraser = tgeraser.core:entry
